kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prebid
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prebid-server
  namespace: prebid
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prebid
        component: server
    spec:
      restartPolicy: Always
      containers:
      - name: prebid-server
        image: gcr.io/newscorp-newsiq/prebid-server:latest
        ports:
        - containerPort: 8000
        - containerPort: 8080
        resources:
          limits:
            cpu: 1500m
            memory: 512Mi
          requests:
            cpu: 900m
            memory: 400Mi   
---
apiVersion: v1
kind: Service
metadata:
  name: prebid-server-service1
  namespace: prebid
  labels:
    app: prebid
    component: server
spec:
  type: NodePort
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8000
  selector:
    app: prebid
    component: server 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prebid-server
    networking.gke.io/managed-certificates: prebid
    kubernetes.io/ingress.allow-http: "false"
  labels:
    app: prebid
    component: server    
  name: prebid-ingress-https
  namespace: prebid
spec:
  backend:
    serviceName: prebid-server-service1
    servicePort: 443
